# python-example-cli

./: .gitignore  README.md  pyproject.toml  tox.ini
scripts/: build-zipfile.sh  dev-setup.sh
src/example_cli/: main.py
src/example_cli/subcommands/: __init__.py
src/example_cli/subcommands/create/: command.py
src/example_cli/subcommands/version/: command.py
src/example_cli/types/: command_types.py
src/example_cli/util/: di.py
